# ChronosAPI-FastAPI

./: README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: initial_data.py  main.py
app/api/: admin.py  health_check.py
app/api/v1/: deps.py  urls.py
app/api/v1/views/: auth.py  events.py  rooms.py
app/core/: config.py  db.py
app/migrations/: env.py
app/migrations/versions/: 07b7a75e441b_add_user.py  9a6bfdc8596f_add_user.py  cade42450e6e_add_calendarevent_and_conferenceroom.py
app/models/: __init__.py  db.py  events.py  rooms.py  users.py
