[project]
name = "chronosapi-fastapi"
version = "0.1.0"
description = "Simple yet efficient RESTful application for managing calendar events and conference room availability."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.1",
    "fastapi>=0.115.8",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.10.6",
    "pydantic-settings>=2.8.1",
    "ruff>=0.9.8",
    "sqlmodel>=0.0.22",
    "tzdata>=2025.1",
    "uvicorn>=0.34.0",
    "psycopg2-binary>=2.9.10",
    "tenacity>=9.0.0",
    "redis>=5.2.1",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.20",
    "sqladmin>=0.20.1",
]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
